--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Testing for the webpage</title>
+	<title>Niraj Kumar</title>
 
 </head>
 <body>
-Just a test in case things don't work out well enough!
+	<p>I literally don't know web-designing, hence I'll be just using basic html to test things out. The other reason is I'm already too busy to learn web-designing now.
+	</p>
 </body>
 </html>
