add cv and links

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
          </div>
          <div id="toggle-nav" class="navbar-collapse collapse">
             <ul class="navbar-nav">
-               <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="studio.html">Studio</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="works.html">Works</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="https://www.linkedin.com/in/neerajbhatt2/">LinkedIn</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="cv/resume_niraj_kumar.pdf">Detailed CV</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="">Google Scholar</a> </li>
+               <li class="nav-item"> <a class="nav-link" href="https://www.hackerrank.com/neeraj2681">Hackerrank</a> </li>
             </ul>
-            <div id="social"><p>Your it to gave life whom as. Favourable dissimilar resolution led for and had.</p></div>
+            <div id="social"><p>Life is what you make of it!</p></div>
          </div>
       </nav>
       <div class="Container">
@@ -43,18 +43,30 @@
                      <div class="col-9">
                         <div class="row">
                            <div class="">
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
+                              <p>Curiosity to know the answers and the will to find the answers will take you places!
                                  <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
+                                 I am a man of logic and have interests in various fields including ancient history specifically related to "out of Africa" theory, mathematics, literature and a bit of cricket.
                               </p>
-                              <img class="img-fluid pt-5 pb-5" src="img/portrait.jpg" alt="Photo">
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
+                              <img class="img-fluid pt-3 pb-3" src="img/portrait.jpg" alt="Photo">
+                              <p>I started off as a computer science engineer but later found out that I'm more interested in the mathematics behind the field of computer science. The algorithms and their analysis was one of the fields I found fascinating.<br>
+                              	Quantum computing is another area which fascinates me due to its high potential in near future.<br>
+                              	I'm also interested in clean energy, ways to tackle the climate change and wild-life conservation.<br>
                                  <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
+                                 Currently I'm working on these projects(writing a single page is also a project!)<br>
+                                 <ol>
+                                 	<li>Exploring various fields in computer science</li>
+                                 	<li>Finishing my watchlist</li>
+                                 	<li>Trying to get a >7 CGPA, currently at 6.0 :(</li>
+                                 	<li>Building atomic habits</li>
+                                 	<li>Learning Python and ML</li>
+                                 </ol>
                               </p>
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
+                              <p>These are some of the ideas I'm really interested in trying.
+                              	<ol>
+                              		<li>ML project related to Covid-19 simulation</li>
+                                 	<li>ML projects related to simulating Human evolution</li>
+                                 	<li>AI in non-deterministic tasks</li>  
+                              	</ol>
                                  <br><br>
                                  Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
                                  Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
