update index.html and cv

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="https://www.linkedin.com/in/neerajbhatt2/">LinkedIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="cv/resume_niraj_kumar.pdf">Detailed CV</a>
+            <a class="nav-link js-scroll" href="cv/niraj_kumar_cs2011.pdf">Detailed CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="mailto:neeraj2681@gmail.com">Mail</a>
