--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Niraj Kumar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Master's student at ISI Kolkata</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">Hello there! This is Niraj</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Scroll down to know more about me!</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
