--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      
+
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -71,13 +71,13 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/work-2.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/no_img.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Hello there! This is Niraj</h1>
+          <h1 class="intro-title mb-4">Hello there! Thanks for visiting, scroll down to know more about me.</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Scroll down to know more about me!</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -126,8 +126,9 @@
                 <div class="skill-mf">
                   <p class="title-s">Currently I'm acquainted with these interests</p>
                                  <ol>
-                                    <li> Different ways to design an efficient neural network</li>
-                                  <li>Exploring various aspects of computer science specifically related to AI and ML</li>
+                                   <li>Handling my finances, mostly learning how to invest smartly.</li>
+                                   <li>Enjoying my reading list, and writing long letters to friends across the globe.</li>
+                                   <li>Exploring various aspects of computer science specifically related to AI and ML</li>
                                  </ol>
               </div>
               </div>
@@ -139,12 +140,12 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Motto: Curiosity to know and the will to discover the answers will take you places!</p>
+                    Motto: Memento Mori!</p>
                   <p class="lead">
-                    I'm a man of logic and have interest in various fields like human history specifically related to "out of Africa" theory, mathematics and brain-simulation.
+                    I have interest in various fields like human history specifically related to "out of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
                   </p>
                   <p class="lead">
-                    I started off as a software engineer but later found out that I'm more interested in the field of Artificial Intelligence and Machine learning. Simulating the human brain to solve the real world problems was a huge motivation to pursue masters.
+                    I started off as a software engineer but later found out that I'm more interested in the field of Artificial Intelligence and Machine learning. Currently, I'm exploring how to leverage data science in reducing frauds across different industries.
                   </p>
                   <p class="lead">
                     Quantum computing is another area which fascinates me due to its high potential in near future.<br>
@@ -162,7 +163,7 @@
     </div>
   </section>
 
-  
+
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
