--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Hello there! Thanks for visiting, scroll down to know more about me.</h1>
+          <h1 class="intro-title mb-4">Hello there! I see you're interested in my profile.</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Scroll down to know more about me!</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -102,7 +102,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Niraj Kumar</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Student (M.Tech CS)</span></p>
+                      <!-- <p><span class="title-s">Profile: </span> <span>Analyst - Data Science @American Express</span></p> -->
                       <p><span class="title-s">Email: </span> <span>neeraj2681@gmail.com</span></p>
                     </div>
                   </div>
