--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/no_img.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/selfie_old_colored.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
