--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <span><b>Indian Statistical Institute, Kolkata</b></span>
                 </p>
                 <p>
-                  <span>M.Tech Computer Science</span><span class="pull-right">2020-22</span>
+                  <span>Master's Computer Science</span><span class="pull-right">2020-22</span>
                   </p>
                   <p>
                    <span><b>Govind Ballabh Pant Engineering College, Uttarakhand</b></span></p>
