--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                 <div class="skill-mf">
                   <p class="title-s">Currently I'm acquainted with these interests</p>
                                  <ol>
-                                   <li>Handling my finances, mostly learning how to invest smartly.</li>
-                                   <li>Enjoying my reading list, and writing long letters to friends across the globe.</li>
-                                   <li>Exploring various aspects of computer science specifically related to AI and ML</li>
+                                   <li>Backtesting different investing strategies, mostly learning how to invest smartly.</li>
+                                   <li>Enjoying my reading list(might not be able to finish it ever)</li>
+                                   <li>Trying out different things like travelling, photography etc(which I always wanted to as a child)</li>li>
+                                   <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
                                  </ol>
               </div>
               </div>
@@ -140,16 +141,16 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Motto: Memento Mori!</p>
+                    Motto: Get out of the Matrix!</p>
                   <p class="lead">
-                    I have interest in various fields like human history specifically related to "out of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
+                    I have interest in various fields/topics like financial freedom, human history specifically related to "Out Of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
                   </p>
                   <p class="lead">
-                    I started off as a software engineer but later found out that I'm more interested in the field of Artificial Intelligence and Machine learning. Currently, I'm exploring how to leverage data science in reducing frauds across different industries.
+                    I started off as a software engineer, but later found out my interest aligns more with the field of AI and ML. In the current organization I'm working for, I'm exploring how to leverage data science in reducing frauds across different industries.
                   </p>
                   <p class="lead">
                     Quantum computing is another area which fascinates me due to its high potential in near future.<br>
-                    I'm also interested in clean energy, ways to tackle the climate change and wild-life conservation.
+                    I'm a big believer of Stoicism, and tries my best to follow the advice given by those who came before us.
                   </p>
                   <p class="lead">
                     <i><h4>For detailed CV and projects, follow the links given at the top.</h4></i>
