--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                  <ol>
                                    <li>Backtesting different investing strategies, mostly learning how to invest smartly.</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
-                                   <li>Trying out different things like travelling, photography etc(which I always wanted to as a child)</li>li>
+                                   <li>Trying out different things like travelling, photography etc(which I always wanted to as a child)</li>
                                    <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
                                  </ol>
               </div>
