--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="https://www.linkedin.com/in/neerajbhatt2/">LinkedIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="cv/cs2011-cv-niraj_kumar.pdf" target="_blank">Detailed CV</a>
+            <a class="nav-link js-scroll" href="cv/niraj_kumar_cv.pdf" target="_blank">Detailed CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="mailto:neeraj2681@gmail.com">Mail</a>
@@ -128,7 +128,7 @@
                                  <ol>
                                    <li>Backtesting different investing strategies, mostly learning how to invest smartly.</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
-                                   <li>Trying out different things like travelling, photography etc(which I always wanted to as a child)</li>
+                                   <li>Trying out different things like learning a different language, travelling, photography etc(which I always wanted to as a child)</li>
                                    <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
                                  </ol>
               </div>
