--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   <p>
                    <span><b>Govind Ballabh Pant Engineering College, Uttarakhand</b></span></p>
                    <p>
-                   <span>B.Tech in Computer Science</span><span class="pull-right">2015-19</span>
+                   <span>Bachelor's in Computer Science</span><span class="pull-right">2015-19</span>
                   </p>
                   <span class="pull-right"></span>
                 </div>
