--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Motto: Get out of the Matrix!</p>
+                    Purpose for now: To get out of the Matrix!</p>
                   <p class="lead">
                     I have interest in various fields/topics like financial freedom, human history specifically related to "Out Of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
                   </p>
