--- a/index.html
+++ b/index.html
@@ -109,11 +109,9 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Education</p>
-                  <p>
                   <span><b>Indian Statistical Institute, Kolkata</b></span>
-                </p>
                 <p>
-                  <span>Master's Computer Science</span><span class="pull-right">2020-22</span>
+                  <span>Master's in Computer Science</span><span class="pull-right">2020-22</span>
                   </p>
                   <p>
                    <span><b>Govind Ballabh Pant Engineering College, Uttarakhand</b></span></p>
@@ -128,7 +126,7 @@
                                  <ol>
                                    <li>Backtesting different investing strategies, mostly learning how to invest smartly.</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
-                                   <li>Trying out different things like learning a different language, travelling, photography etc(which I always wanted to as a child)</li>
+                                   <li>Trying out different things like learning a different language, travelling, photography etc (which I always wanted to as a child)</li>
                                    <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
                                  </ol>
               </div>
