--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="https://www.linkedin.com/in/neerajbhatt2/">LinkedIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="cv/niraj_kumar_cv.pdf" target="_blank">Detailed CV</a>
+            <a class="nav-link js-scroll" href="cv/niraj_kumar_cv_v1.pdf" target="_blank">Detailed CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="mailto:neeraj2681@gmail.com">Mail</a>
