--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="https://www.linkedin.com/in/neerajbhatt2/">LinkedIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="cv/niraj_kumar_cv_v1.pdf" target="_blank">Detailed CV</a>
+            <a class="nav-link js-scroll" href="cv/niraj_kumar__resume.pdf" target="_blank">Detailed CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="mailto:neeraj2681@gmail.com">Mail</a>
@@ -96,7 +96,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/niraj_trip2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/IMG_0511.CR2" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
