Update info and add updates photos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/IMG_0511.CR2" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/IMG_0678.JPG" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -107,7 +107,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="skill-mf">
+                <!-- <div class="skill-mf">
                   <p class="title-s">Education</p>
                   <span><b>Indian Statistical Institute, Kolkata</b></span>
                 <p>
@@ -119,15 +119,18 @@
                    <span>Bachelor's in Computer Science</span><span class="pull-right">2015-19</span>
                   </p>
                   <span class="pull-right"></span>
-                </div>
+                </div> -->
 
                 <div class="skill-mf">
-                  <p class="title-s">Currently I'm acquainted with these interests</p>
+                  <p class="title-s">Other than work, currently I'm trying out these things</p>
                                  <ol>
-                                   <li>Backtesting different investing strategies, mostly learning how to invest smartly.</li>
+                                   <li>Backtesting different investing strategies, mostly learning how to invest.</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
-                                   <li>Trying out different things like learning a different language, travelling, photography etc (which I always wanted to as a child)</li>
+                                   <li>Trying out a variety of interests like learning a different language, photography, meditation etc.</li>
                                    <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
+                                   <li>Started running again</li>
+                                   <li>Declutter - both pyhysical and digital</li>
+                                   <li>Maintaining a sleep schedule</li>
                                  </ol>
               </div>
               </div>
@@ -141,10 +144,10 @@
                   <p class="lead">
                     Purpose for now: To get out of the Matrix!</p>
                   <p class="lead">
-                    I have interest in various fields/topics like financial freedom, human history specifically related to "Out Of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
+                    I have interest in various topics like financial freedom, human history specifically related to "Out Of Africa" theory, mathematics, different cultures across the globe, and Stoicism.
                   </p>
                   <p class="lead">
-                    I started off as a software engineer, but later found out my interest aligns more with the field of AI and ML. In the current organization I'm working for, I'm exploring how to leverage data science in reducing frauds across different industries.
+                    I started off as a software engineer, but later found out my interest aligns more with the field of AI and ML. In the current organization I'm working for, I try to leverage data science in reducing transaction frauds across different industries.
                   </p>
                   <p class="lead">
                     Quantum computing is another area which fascinates me due to its high potential in near future.<br>
