--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <div class="skill-mf">
                   <p class="title-s">Other than work, currently I'm trying out these things</p>
                                  <ol>
-                                   <li>Backtesting different investing strategies, mostly learning how to invest.</li>
+                                   <li>Backtesting different investing strategies, mostly learning how to invest(It's all red now)</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
-                                   <li>Trying out a variety of interests like learning a different language, photography, meditation etc.</li>
-                                   <li>Exploring various aspects of computer science specifically related to Machine Learning and AI</li>
-                                   <li>Started running again</li>
-                                   <li>Declutter - both pyhysical and digital</li>
-                                   <li>Maintaining a sleep schedule</li>
+                                   <li>Trying out a variety of interests like learning a different language, photography, meditation etc. (why not?)</li>
+                                   <li>Exploring various aspects of computer science specifically related to Machine Learning and AI (a man needs a job to survive in this economy)</li>
+                                   <li>Started running again(I'm probably faster than Cheetah now!)</li>
+                                   <li>Declutter - both pyhysical and digital(technically doesn't work)</li>
+                                   <li>Maintaining a sleep schedule(sleeping at 4 AM was a cool idea in college only)</li>
                                  </ol>
               </div>
               </div>
