--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="skill-mf">
                   <p class="title-s">Other than work, currently I'm trying out these things</p>
                                  <ol>
-                                   <li>Backtesting different investing strategies, mostly learning how to invest(It's all red now)</li>
+                                   <li>Backtesting different investing strategies, mostly learning how to invest(<p class="red-text">It's all red now</p>)</li>
                                    <li>Enjoying my reading list(might not be able to finish it ever)</li>
                                    <li>Trying out a variety of interests like learning a different language, photography, meditation etc. (why not?)</li>
                                    <li>Exploring various aspects of computer science specifically related to Machine Learning and AI (a man needs a job to survive in this economy)</li>
